--- a/.classpath
+++ b/.classpath
@@ -14,6 +14,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.45-bin.jar" sourcepath="lib/src"/>
+	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.45-bin.jar" sourcepath="lib/src"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
